<feat>:<add button > add interactive button and change the image

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
                 <li>Home</li>
                 <li>Acerca De Nosotros </li>
                 <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
-                <li id="cost">Precios</li>
+                <li id="cost">Envaces </li>
                 <li>Contactanos</li>
                 <div class="button">
                   <img class=search-icon src="../Images/search-icon-2044x2048-psdrpqwp.png"></i>
@@ -25,7 +25,9 @@
             </nav>
           </div>
           <div class="hero-text">
-            <h1 id="sell-phase">Perfumes Duraderos A Precios Bajos </h1>
+            <h1 id="sell-phase"> </h1>
+            <p>Replicas De Perfumeria Francesa Con Garantia De Devolucion </p>
+            <a href="#" rel="noopener noreferrer" id="call-to-action" style="--clr:#1e9bff"><span>Precios</span><i></i> </a>
           </div>
       </div>
     </div>
