<feat><finish interactive button and modify their container file> add a @ import to the <a> element and create a separate .css file for the  color-button to have better organize

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,11 +25,20 @@
             </nav>
           </div>
           <div class="hero-text">
-            <h1 id="sell-phase"> </h1>
-            <p>Replicas De Perfumeria Francesa Con Garantia De Devolucion </p>
-            <a href="#" rel="noopener noreferrer" id="call-to-action" style="--clr:#1e9bff"><span>Precios</span><i></i> </a>
+            <h1 id="sell-phase">Perfumes De Exelente Calidad A Precios Bajos </h1>
+            <p>Replicas De Perfumeria Con Garantia De Devolucion </p>
+            <a href="#" rel="noopener noreferrer" id="call-to-action" style="--clr:#ff1867"><span>Precios</span><style>@import url(../CSS/color-button.css);</style><i></i> </a>
           </div>
       </div>
+    </div>
+
+    <div class="part-two">
+
+      <div class="image-information"><img src="" alt="perfume bottle empty"</div>
+
+      <div class="text-information"></div>
+
+
     </div>
     <div class="content"></div>
     
