--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,14 +2,16 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfumas.com</title>
     <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="stylesheet" href="../CSS/Media-Queries.css">
     <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous"></script>
+    <script src="../javascript.js"></script>
   </head>
   
   <body>
-    
+    <style>@import url(/CSS/Media-Queries.css);</style>
+
       <div class="Hero">
         <div class="header container">
                           
@@ -22,7 +24,7 @@
                   <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
                   <li id="cost">Envaces </li>
                   <li>Contactanos</li>
-                  <li><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
+                  <li><i id="search-icon"   class="fa-solid fa-magnifying-glass fa-lg"></i></li>
                 </ul>
               </nav>
             </div>
