<fead> <Create a simple card for bigger vh in the benefits section> - separate the 2 faces - make the face 1 height 250px both 530 - make the 1 face turn to color - get rib off the shadow - turn off the opacity of the h3 and turn it to black - move the h3 to top 90px and right 105px and font size of 1.5 em - change the font size of the p for 33px - turn the cart inside content to relative and move it 60px - turn the button to a bigger size of 1.5

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
   </head>
   
   <body>
-    <style>@import url(/CSS/Media-Queries.css);</style>
+    
 
       <div class="Hero">
         <div class="header container">
@@ -90,7 +90,7 @@
                   <div class="card-inside-content"
                   data-text="Recarga Gratis">
                     <i id="benefit-icon" class="fa-solid fa-id-card-clip fa-2xl"></i>
-                    <h3>"Recarga Gratis"</h3>
+                    <h3>Recarga Gratis</h3>
                   </div>
                 </div>
                 <div class="face face2">
@@ -107,7 +107,7 @@
                 <div class="face face1" >
                   <div class="card-inside-content"data-text="Econorecarga">
                     <i class="fa-solid fa-wine-bottle fa-2xl"></i>
-                    <h3>"Econorecarga"</h3>
+                    <h3>Econorecarga</h3>
                   </div>
                 </div>
                 <div class="face face2">
@@ -206,8 +206,7 @@
       <div class="perfumas-rights">
 
       </div>
-
-
+      <style>@import url(/CSS/Media-Queries.css);</style>
 
 
       </div>  
