<fead><Make The Typocrafphy Responsive > [add custom properties to the font size's]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -206,8 +206,8 @@
       <div class="perfumas-rights">
 
       </div>
-      <style>@import url(/CSS/Media-Queries.css);</style>
-
+      <!-- <style>@import url(/CSS/Media-Queries.css);</style>
+ -->
 
       </div>  
   </body>  
