<fix>[Make Webside Responsive]:<Change media queries to px and fix values > [Changed root values,make part 3 responsive to 2560px 2050px 1600px 1410px 1100px and  add a bar icon in 700px ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,6 +14,7 @@
       <div class="Hero ">     
         <div class="links container ">
           <img class="logo" src="../Images/Perfumas-two.png"alt="Perfumas Logo">    
+          <i class="fa-solid fa-bars"></i>
           <nav>
             <ul>
               <li>Home</li>
@@ -155,7 +156,7 @@
                 <img class="personalize-image" src="https://t3.ftcdn.net/jpg/08/16/84/66/240_F_816846611_DEUdEs6qJCWOYLXwbGEaeHEdRyTbo2r6.jpg" alt="perfume bottle empty">
                 <div class="text-information">
                   <h3>Si y mas..</h3>
-                  <p>En Perfumas nos preocupamos por tener una diversidad de fragancias cada vez mayor para satisfacerte dependiendo de tus necesidades </p>
+                  <p>En Perfumas nos preocupamos por tener una diversidad de fragancias cada vez mayor para satisfacerte dependiendo de tusf necesidades </p>
                 </div>  
             </div> 
         </div>
