<feat>:<add images and finish make the home page responsive> [add media queries to 1100px 950px 700px 470px 350px also add images to part four and five ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,6 +69,7 @@
                   </div>
                   <div class="face face2">
                     <div class="card-inside-content">
+                      <h3 class="fantom-h3">Obten El 20%!!</h3>
                       <p>Al traer contigo un familiar,amigo, compañero que no haya comprado en nuestros puntos o que presente el con tu informacion recibe en toda tu siguiente compra el 20% DE DESCUENTO </p>
                     </div>
                     <div> 
@@ -83,10 +84,12 @@
                     data-text="Recarga Gratis">
                       <i id="benefit-icon" class="fa-solid fa-id-card-clip fa-2xl"></i>
                       <h3>Recarga Gratis</h3>
+                      
                     </div>
                   </div>
                   <div class="face face2">
                     <div class="card-inside-content">
+                      <h3 class="fantom-h3">Recarga Gratis</h3>
                       <p>Al rellenar la tarjeta perfumas por cada compra o recarga de perfumeria gana una recarga GRATIS </p>
                     </div>
                     <div> 
@@ -104,6 +107,7 @@
                   </div>
                   <div class="face face2">
                     <div class="card-inside-content">
+                      <h3 class="fantom-h3">Econorecarga</h3>
                       <p>Al ir a cualquiera de nuestros puntos 3 dias antes o 3 dias despues de tu cumpleaños obten el 20% de descuento en todas tu compra y recibe gratis una crema perfumas  </p>
                     </div>
                     <div> 
@@ -121,6 +125,7 @@
                   </div>
                   <div class="face face2">
                     <div class="card-inside-content">
+                      <h3 class="fantom-h3">Econorecarga</h3>
                       <p>Al ir a cualquiera de nuestros puntos 3 dias antes o 3 dias despues de tu cumpleaños obten el 20% de descuento en todas tu compra y recibe gratis una crema perfumas </p>
                     </div>
                       <div> 
@@ -140,7 +145,7 @@
           </div>
             <div class="two-content ">
 
-                <img class="personalize-image" src="https://t3.ftcdn.net/jpg/08/16/84/66/240_F_816846611_DEUdEs6qJCWOYLXwbGEaeHEdRyTbo2r6.jpg" alt="perfume bottle empty">
+                <img class="personalize-image" src="../Images/istockphoto-1367978020-1024x1024-transformed.jpeg" alt="perfume bottle empty">
                 <div class="text-information">
                   <h3>Aceite</h3>
                   <p>Nuestros perfumes son en base de aceite dandole una perdurabilidad cercana a la perfumeria original,Nosotros mismos Preparamos tus perfumes al mas alto porcentage de fragancia,garantizado por 10 horas de perdurabilidad </p>
@@ -153,9 +158,9 @@
           </div>
             <div class="two-content">
 
-                <img class="personalize-image" src="https://t3.ftcdn.net/jpg/08/16/84/66/240_F_816846611_DEUdEs6qJCWOYLXwbGEaeHEdRyTbo2r6.jpg" alt="perfume bottle empty">
+                <img class="personalize-image" src="/Images/pexels-kowalievska-1148952.jpg" alt="perfume bottle empty">
                 <div class="text-information">
-                  <h3>Si y mas..</h3>
+                  <h3>Si Y Mas..</h3>
                   <p>En Perfumas nos preocupamos por tener una diversidad de fragancias cada vez mayor para satisfacerte dependiendo de tusf necesidades </p>
                 </div>  
             </div> 
@@ -170,6 +175,9 @@
           <p id="slogan">calidad a su alcance </p>
         </span>
         <div class="navigation">
+          <div id="mision">
+            <p>Nuestro negocio nació en el año 2015. Nos enfocamos principalmente al sector de la perfumería, con el propósito de ofrecer productos de la más alta calidad y una excelente atención, que cumpla de manera satisfactoria las necesidades de nuestros clientes.</p>
+          </div>
           
         </div>
         <div class="contact-us"></div>
