<feat>[Create The Footer ]:<Make The Footer Responsive> [   1.make the footer responsive for each media queries   2.add icon and divider line to the perfumas rights ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -217,7 +217,12 @@
           </span>
         </div>
         <div class="contacts">
-          
+          <span class="adress">
+            <i class="fa-solid fa-location-dot"></i>            
+            <p>
+              Calle18#103a-26
+            </p>
+          </span>
           <span class="phone">
             <i class="fa-solid fa-phone"></i>
             <p>
@@ -230,17 +235,15 @@
               perfumas2015@gmail.com
             </p>
           </span>
-          <span class="adress">
-            <i class="fa-solid fa-location-dot"></i>            
-            <p>
-              Calle18#103a-26
-            </p>
-          </span>
+          
 
         </div>
         </section>
       </div>
-      <div class="perfumas-rights"></div> 
+      <div class="perfumas-rights">
+        <hr class="divider-line"></hr>
+        <p class="rights">2024 Perfumas</p>
+      </div> 
       <style>@import url(/CSS/Media-Queries.css);</style>
   </body>  
   
