<feat>[Create The Features Section ]:<Create The Row Structure> [   1.Add image   2.Add div ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -195,7 +195,7 @@
           </div>
           <div class="part-content">
             <div class="testimony">
-              <img class="testimony-client-photo" src="../Images/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="client photo" class="client-testimony-image">
+              <img class="testimony-client-photo" src="../Images/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="client phot  o" class="client-testimony-image">
               <h3 class="text-testimony">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ab rem ad facilis sequi iste possimus consequuntur architecto officiis voluptas provident, optio ratione facere quisquam cupiditate, fuga placeat quos! Distinctio."</h3>
             </div>
             <div class="statistic">
@@ -252,6 +252,10 @@
 
           </div>
          
+        </div>
+        <div class="features part five">
+          <img src="../Images/Heroimage-transformed.jpeg" alt="">
+          <div class="carrusel"></div>
         </div>
         <!-- <div id="Esencia" class="part four ">
           <div class="text-information-header one container">
