--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfumas.com</title>
     <link rel="stylesheet" href="../CSS/index.css">
-    <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous"></script>
-    <script src="../javascript.js"></script>
+    <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous" ></script>
   </head>
   <body>   
     <div class="part one">
@@ -254,9 +253,24 @@
          
         </div>
         <div class="features part five">
-          <img src="../Images/Heroimage-transformed.jpeg" alt="">
-          <div class="carrusel"></div>
+          <h1 class="section-headline">Features</h1>
+          <div class="part-content five">
+            <span class="part-five-image-container">
+              <img src="../Images/Heroimage-one.jpeg" alt="">
+            </span>
+            <div class="carrusel">
+              <button class="button left">&#x21d0;</button><button class="button right" >&#x21d2;</button>
+              <ul>
+                <li><span></span></li>
+                <li><span></span></li>
+                <li><span></span></li>
+                <li><span></span></li>
+              </ul>
+            </div>
+            
+          </div>
         </div>
+
         <!-- <div id="Esencia" class="part four ">
           <div class="text-information-header one container">
             <h2>Base En Aceite o Agua? </h2>
