<feat>[Create The Features Section]:<Add Javascript Features> [   1.Create a carrousel that when you click the right button shift to the   next span and the left one shift to the span before     1.1 Create a variable that select the buttons     1.2 Create a for each button loop       1.2.1 Create a click event listener       1.2.2 Determinate to go to the next image or the image before       1.2.3 variable that Select the slides       1.2.4 Variable that select the active slide       1.2.5 Variable that select the new index       1.2.6 Loop back to the last image       1.2.7 Each time when we press the buttons switch the data-active to the next or preview li ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <title>Perfumas.com</title>
     <link rel="stylesheet" href="../CSS/index.css">
     <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous" ></script>
+    <script src="../javascript.js" defer></script>
   </head>
   <body>   
     <div class="part one">
@@ -258,15 +259,16 @@
             <span class="part-five-image-container">
               <img src="../Images/Heroimage-one.jpeg" alt="">
             </span>
-            <div class="carrusel">
-              <button class="button left">&#x21d0;</button><button class="button right" >&#x21d2;</button>
-              <ul>
-                <li><span></span></li>
-                <li><span></span></li>
-                <li><span></span></li>
-                <li><span></span></li>
-              </ul>
-            </div>
+           <span data-carousel class="carousel">
+            <button class="button preview"data-carousel-button='preview'>&#x291D;</button>
+            <button class ="button next" data-carousel-button='next'>&#x291E;</button>
+            <ul data-slides>
+              <li class="slide" data-active ><span><p data-text="Hii">HII</p></span></li>
+              <li class="slide" ><span><P>HELLO</P></span></li>
+              <li class="slide" ><span><P>WHAT'S UP</P></span></li>
+              <li class="slide" ><span><P>HOW YOU DOING</P></span></li>
+            </ul>
+           </span>
             
           </div>
         </div>
