<Feat>[Create The Features Section]:<JavaScript Features And Style It> [   1.Javascript     1.1 Add functions to make the carousel code more readable   2.Style it     1.2 Create a transition between slides to make it look better
]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -267,7 +267,7 @@
               <i class="fa-solid fa-chevron-right"></i>
             </button>
             <span class="card-icon" data-slides-icon>
-              <i data-active class="fa-solid fa-circle"></i>
+              <i data-white class="fa-solid fa-circle"></i>
               <i class="fa-solid fa-circle"></i>
             </span>
             <ul data-slides>
