<Feat>[Perfumas Project]:[Change The Media Queries Tags ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
       <nav>
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
         <i class="fa-solid fa-bars"></i>
-        <nav>
+        <nav class="navigation-bar">
           <ul>
             <li class="Home" ><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html" target="_self">Acerca De Nosotros</a></li>
