--- a/HTML/index.html
+++ b/HTML/index.html
@@ -397,7 +397,20 @@
         <h1 class="section-headline">FAQS</h1>
         <article class="part-content">
           <ul class="ask-questions" data-slides>
-            <li data-active="true" >
+            <li  data-slider='1' data-active="true" >
+              <span data-drop-down-container class="drop-down-container">
+                <span data-drop-down-icon-container class="icon-container">
+                  <i data-drop-down-icon
+                  class="fa-solid fa-caret-down"></i> 
+                </span>
+                <span data-drop-down class="drop-down">
+                  <h3 class="question">Tenemos Garantia Por Los Envaces?</h3>
+                  <p data-answer class="answer">No,no ofrecemos garantia por los envaces por eso recomendamos probarlos antes de retirarse de la tienda</p>
+    
+                </span>
+              </span>
+            </li>
+            <li data-slider='0'  >
               <span data-drop-down-container class="drop-down-container">
                 <span data-drop-down-icon-container class="icon-container">
                   <i data-drop-down-icon
@@ -410,20 +423,7 @@
                 </span>
               </span>
             </li>
-            <li  >
-              <span data-drop-down-container class="drop-down-container">
-                <span data-drop-down-icon-container class="icon-container">
-                  <i data-drop-down-icon
-                  class="fa-solid fa-caret-right"></i> 
-                </span>
-                <span data-drop-down class="drop-down">
-                  <h3 class="question">Tenemos Garantia Por Los Envaces?</h3>
-                  <p data-answer class="answer">No,no ofrecemos garantia por los envaces por eso recomendamos probarlos antes de retirarse de la tienda</p>
-    
-                </span>
-              </span>
-            </li>
-            <li >
+            <li data-slider='0' >
               <span data-drop-down-container class="drop-down-container">
                 <span data-drop-down-icon-container class="icon-container">
                   <i data-drop-down-icon
