<Feat>[Create The Footer ]:<Make It Responsive> [   1. Change part one and footer-logo width     - 2560     - 2095     - 1670     - 1250     - 950     - 810     - 650     - 445     - 330 ]

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
         <i class="fa-solid fa-bars"></i>
         <nav class="navigation-bar">
-          <ul>
+          <ul class="links">
             <li class="Home" ><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html" target="_self">Acerca De Nosotros</a></li>
             <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
