--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,15 +25,15 @@
     </head>
   
     <body>   
-  
+    
       <header data-header>
         <nav class="mobile-menu" data-mobile-menu>
           <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
           <ul class="mobile-links" >
-            <li  ><a href="./index.html">Home</a></li>
+            <li class="Home" ><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html" target="_self">Acerca De Nosotros</a></li>
             <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
-            <li id="cost">Envaces</li>
+            <li><a rel="noopener noreferrer" href="bottles.html">Envaces</a></li>
             <li>Contactanos</li>
           </ul>
           <i class="fa-solid fa-x" data-close-button></i>
@@ -63,8 +63,8 @@
               <span>catalogo</span><style>@import url(../CSS/color-button.css);</style><i></i>  
             </a>
           </article>
-          <img class="hero-image-desktop " src="../Images/istockphoto-1574936463-612x612.jpg" alt="">  
-          <img class="hero-image-mobile" src="../Images/istockphoto-1574936463-612x612.jpg" alt="">        
+          <img class="desktop-image " src="../Images/istockphoto-1574936463-612x612.jpg" alt="">  
+          <img class="mobile-image" src="../Images/istockphoto-1574936463-612x612.jpg" alt="">        
         </section>
       </header>
   
@@ -79,7 +79,7 @@
               <h1 class="section-headline">
                 Cansado De Que El Dinero Nunca Te Alcance?
               </h1>
-              <img class='information-image-mobile 'src="https://img.freepik.com/premium-photo/piggy-bank_488220-31529.jpg?w=740" alt="">
+              <img class='mobile-image 'src="https://img.freepik.com/premium-photo/piggy-bank_488220-31529.jpg?w=740" alt="">
               <p>
                 Seamos claros todos nosotros amamos los perfumes,pero muchas veces nos terminamos quedando cortos de dinero y <strong>al hacer cuentas nos terminamos sorpendiendo en cuanto gastamos en cuidado personal y perfumeria</strong> y nos quedamos pensando si vale la pena gastar tanto en perfumer originales.
               </p>
@@ -108,7 +108,7 @@
   
           </article>
   
-          <img src="https://media.istockphoto.com/id/171582472/es/foto/robar-ahorros-foto-de-estudio-concepto-sobre-blanco.jpg?s=2048x2048&w=is&k=20&c=ccLEqBmYJF7fE3eXY1J2bnaJMftOG1fhGIkdJY505yE=" alt="">
+          <img class="desktop-image" src="https://media.istockphoto.com/id/171582472/es/foto/robar-ahorros-foto-de-estudio-concepto-sobre-blanco.jpg?s=2048x2048&w=is&k=20&c=ccLEqBmYJF7fE3eXY1J2bnaJMftOG1fhGIkdJY505yE=" alt="">
   
         </section>
   
