<Feat>[Create The Catalogue Page]:<Make It Responsive> [   1.Cut the images   2.Add responsive grid-template-columns   3.Make the call to actions always take the res of the space and the tet align it to the center ]

--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -149,12 +149,12 @@
           <div class="fontibon">
             <iframe class="face" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15906.162595768903!2d-74.1562363!3d4.6756559!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9d7b74160ed3%3A0xd5a56e271a40b92a!2sPerfumas!5e0!3m2!1ses-419!2sco!4v1742915049380!5m2!1ses-419!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <img class="fontibon" src="/Images/Perfumas Fontibon.jpg" alt="Perfumas Entrada">
+            <img class="fontibon" src="/Images/About-Us/Perfumas Fontibon.jpg" alt="Perfumas Entrada">
           </div>
           <div class="bonanza">
             <iframe class="face" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15906.162595768903!2d-74.1562363!3d4.6756559!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9d7b74160ed3%3A0xd5a56e271a40b92a!2sPerfumas!5e0!3m2!1ses-419!2sco!4v1742915049380!5m2!1ses-419!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <img class="fontibon" src="/Images/Perfumas Fontibon.jpg" alt="Perfumas Entrada">
+            <img class="fontibon" src='../Images/About-Us/Perfumas Fontibon.jpg' alt="Perfumas Entrada">
           </div>
         </article>
         
