--- a/HTML/catalogo.html
+++ b/HTML/catalogo.html
@@ -45,24 +45,27 @@
       <section class="catalogue">
         <h1 class="section-headline">Lista De Fragancias </h1>
         <article>
-          <div>
-            <img src="/Images/Good Girl Add Photo.jpg" alt="">
 
-            <a href="#" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff"><span>Perfumeria Dama</span><i></i> </a>
+          <div class="woman">
+            <a href="../Images/Catalogue/FRAGANCIAS-FEMENINAS-DISPONIBLES.pdf"target="_blank">
+              <span>
+                <img src="/Images/Catalogue/Good-Girl.jpg" alt="">
+  
+                <a href="#" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff"><span>Perfumeria Dama</span><i></i> </a>
+              </span>
+            </a>
           </div>
-          <div>
-            <img src="" alt="">
-            <a href="#" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff"><span>Perfumeria Caballero</span><i></i> </a>
+          <div class="man">
+            <a href="../Images/Catalogue/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank"><span>
+              <img src="../Images/Catalogue/Invictus.jpg" alt="">
+              <a href="#" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff"><span>Perfumeria Caballero</span><i></i> </a>
+            </span></a>
           </div>
+          
         </article>
       </section>
       <style>@import url(../CSS/color-button.css);</style><i></i> </ar>
     </header>
-
-    <main data-main>
-
-    </main>
-
     <footer data-footer >
       
       <div class="footer-content container">
