--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,8 +63,8 @@
               <span>catalogo</span><style>@import url(../CSS/color-button.css);</style><i></i>  
             </a>
           </article>
-          <img class="desktop-image " src="../Images/istockphoto-1574936463-612x612.jpg" alt="">  
-          <img class="mobile-image" src="../Images/istockphoto-1574936463-612x612.jpg" alt="">        
+          <img class="desktop-image " src="../Images/Home/Happy Client.jpg" alt="">  
+          <img class="mobile-image" src="../Images/Home/Happy Client.jpg" alt="">        
         </section>
       </header>
   
@@ -277,7 +277,7 @@
   
             <div class="testimony">
   
-              <img class="testimony-client-photo" src="../Images/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="client phot  o" class="client-testimony-image">
+              <img class="testimony-client-photo" src="../Images/Home/Testimony-Client.jpg" alt="client phot  o" class="client-testimony-image">
   
               <h3 class="text-testimony">
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ab rem ad facilis sequi iste possimus consequuntur architecto officiis voluptas provident, optio ratione facere quisquam cupiditate, fuga placeat quos! Distinctio."
@@ -366,7 +366,7 @@
           <article class="part-content ">
   
             <span class="part-five-image-container">
-              <img src="../Images/Heroimage-one.jpeg" alt="">
+              <img src="../Images/Home/Heroimage-one.jpeg" alt="">
             </span>
             <span data-carousel class="carousel">
   
