--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -19,26 +19,31 @@
 
       <nav class="mobile-menu" data-mobile-menu>
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
+
         <ul class="mobile-links" >
           <li class="Home" ><a href="./index.html">Home</a></li>
           <li><a href="./about-us.html" target="_self">Acerca De Nosotros</a></li>
           <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
-          <li><a rel="noopener noreferrer" href="bottles.html">Envaces</a></li>
-          <li>Contactanos</li>
+          <li id="cost">Envaces</li>
+          <li> <a href="./contact-us.html">Contactanos</a></li>
         </ul>
+
         <i class="fa-solid fa-x" data-close-button></i>
       </nav>
       <nav class="desktop-menu" data-desk-menu>
-        <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
+        <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">  
+
         <i class="fa-solid fa-bars" data-menu-bar></i>
+
         <ul class="desktop-links">
           <li class="Home" ><a href="./index.html">Home</a></li>
           <li><a href="./about-us.html" target="_self">Acerca De Nosotros</a></li>
           <li><a rel="noopener noreferrer" href="catalogo.html">Catalogo</a></li>
-          <li id="cost">Envaces</li>
-          <li>Contactanos</li>
+          <li><a rel="noopener noreferrer" href="">Envaces</a></li>
+          <li> <a href="./contact-us.html">Contactanos</a></li>
           <li><i id="search-icon"   class="fa-solid fa-magnifying-glass fa-lg"></i></li>
         </ul>
+
       </nav>
 
       <section class="hero-content about-us " data-hero-container>
@@ -167,7 +172,7 @@
       
       <div class="footer-content container">
 
-        <section class="section one">
+        <section class="footer-presentation">
 
           <img class="footer-logo" src="../Images/Logo velas artesanales rosa/2.png"alt="Perfumas Logo"> 
 
@@ -177,7 +182,7 @@
           <p>Nuestro negocio nació en el año 2015. Nos enfocamos principalmente al sector de la perfumería, con el propósito de ofrecer productos de la más alta calidad y una excelente atención, que cumpla de manera satisfactoria las necesidades de nuestros clientes.</p>
 
         </section>
-        <section class="section two">
+        <section class="footer-nav">
 
           <div class="footer-links">
 
