<Style>[Create The Contact Us Page]:<Make It Responsive & Clean Code>[   1.Add flex wrap and direction to the ways of contact   2.Change structure of the code
]

--- a/HTML/catalogo.html
+++ b/HTML/catalogo.html
@@ -17,7 +17,7 @@
 
   <body>   
     <header data-header>
-      <nav class="mobile-menu" data-mobile-menu>
+      <nav class="nav-mobile" data-mobile-menu>
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">   
 
         <ul class="mobile-links" >
@@ -30,7 +30,7 @@
 
         <i class="fa-solid fa-x" data-close-button></i>
       </nav>
-      <nav class="desktop-menu" data-desk-menu>
+      <nav class="nav-desktop" data-desk-menu>
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png"alt="Perfumas Logo">  
 
         <i class="fa-solid fa-bars" data-menu-bar></i>
