[Style][Enhance About Us and Index Pages]: Improve text clarity, update contact information layout, and enhance responsiveness.

--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -46,14 +46,13 @@
       </nav>
 
       <section class="hero-content about-us " data-hero-container>
-          <article class="hero-text-about-us ">
-            <h1 class="hero-headline">Creemos En Que No Necesitas Gastar Millones Para Oler Bien Y Generar Una Buena Impresion</h1>
-            <span class="sub-hero-headline">
-              <p > Al igual que tu pensabamosque teniamos que invertir en nosotros mismos tenia que ser costoso  </p>
-            </span> 
-           
-          </article>
-      </section>
+        <article class="hero-text-about-us ">
+          <h1 class="hero-headline">Creemos que no necesitas gastar millones para oler bien y causar una buena impresión</h1>
+          <span class="sub-hero-headline">
+            <p>Al igual que tú, pensábamos que invertir en nosotros mismos tenía que ser costoso.</p>
+          </span> 
+        </article>
+    </section>
       <div class="wave-animation"></div>
 
     </header>
@@ -63,24 +62,24 @@
       <section class="who-we-are">
 
         <h1 class="section-headline">
-          Quienes Somos 
+          Quiénes Somos 
         </h1>
-
+        
         <img class="mobile-image" src="../Images/Mona Y Polo 2.jpg" alt="">
-        <article >
-
-         <span>
-
-          <p id="present-the-CEO">Somos Aura Y Polo Fundadores De Perfumas,somos una pareja de bogota que decidio emprender y tener su propia empresa </p>
-          <p id="Polo">Polo es un contador graduado de la universidad central con mas de 30 años de experiencia y ex'musico de acordion </p>
-          <p id="Mona">Aura es una madre emprededora y estilista  </p>
-
-         </span>
-
-         <img class="desktop-image" id="CEO-image" src="../Images/Mona Y Polo 2.jpg" alt="">
-         <!-- <img src="../Images/Mona Y Polo.jpg" alt=""> -->
+        <article>
+          <span>
+            <p id="present-the-CEO">
+              Somos <strong>Aura</strong> y <strong>Polo</strong>, fundadores de <strong>Perfumas</strong>, una empresa familiar nacida en <strong>Bogotá</strong> con el sueño de acercar la perfumería de calidad a más personas.
+            </p>
+            <p id="Polo">
+              <strong>Polo</strong> es contador graduado de la <strong>Universidad Central</strong> con más de <strong>30 años de experiencia</strong> en gestión y finanzas. Ha sido pieza clave en el crecimiento y estabilidad de Perfumas. Además, fue músico de acordeón, lo que le ha permitido desarrollar creatividad y empatía en el trato con los clientes. Ha tenido dos negocios propios: un <strong>asadero</strong> y una <strong>tienda de ropa</strong>. Polo es una persona honesta, responsable y comprometida con brindar el mejor servicio. Su motivación para emprender junto a Aura nació del deseo de ofrecer productos de calidad y accesibles, y espera seguir impactando positivamente la vida de sus clientes y la comunidad.
+            </p>
+            <p id="Mona">
+              <strong>Aura</strong> es una mujer independiente desde <strong>2005</strong>, madre de <strong>4 hijos</strong>, estilista profesional y emprendedora. Ha dirigido dos empresas grandes y conoce el mundo de las fragancias por su experiencia como compradora en diferentes tiendas de perfumería, incluso <strong>Panamá</strong>,siempre busca ofrecer atención personalizada y productos accesibles para todos.
+            </p>
+          </span>
+          <img class="desktop-image" id="CEO-image" src="../Images/Mona Y Polo 2.jpg" alt="">
         </article>
-
       </section>
       <section class="why-we-exist">
 
