[Refactor][Update Navigation and JavaScript]: Remove blog link from navigation across multiple pages, add selectors for improved code readability and maintainability in JavaScript.

--- a/HTML/contact-us.html
+++ b/HTML/contact-us.html
@@ -126,10 +126,9 @@
               <h3>Navegación</h3>
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="./about-us.html">Acerca De Nosotros</a></li>
                 <li><a href="./catalogo.html">Catálogo</a></li>
                 <li><a href="./contact-us.html">Contáctanos</a></li>
-                <li><a href="./blog.html">Blog</a></li>
               </ul>
   
             </span>
