Update website content and structure: - Standardized text for "Acerca de nosotros" across multiple pages. - Added a new "Blog" section with a dedicated blog.html file. - Updated image paths and added new images for the catalog. - Modified catalog titles and links for better clarity. - Improved contact information and ensured consistency in phone numbers and email. - Created a new fragance-catalogue.html page for detailed fragrance listings.

--- a/HTML/about-us.html
+++ b/HTML/about-us.html
@@ -23,9 +23,10 @@
       <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <ul class="mobile-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+        <li><a href="./about-us.html">Acerca de nosotros</a></li>
         <li><a href="./catalogo.html">Catálogo</a></li>
         <li><a href="./contact-us.html">Contáctanos</a></li>
+        <li><a href="./blog.html">Blog</a></li>
       </ul>
       <i class="fa-solid fa-x" data-close-button></i>
     </nav>
@@ -35,9 +36,10 @@
       <i class="fa-solid fa-bars" data-menu-bar></i>
       <ul class="desktop-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+        <li><a href="./about-us.html">Acerca de nosotros</a></li>
         <li><a href="./catalogo.html">Catálogo</a></li>
         <li><a href="./contact-us.html">Contáctanos</a></li>
+        <li><a href="./blog.html">Blog</a></li>
         <li><i id="search-icon" class="fa-solid fa-magnifying-glass fa-lg"></i></li>
       </ul>
     </nav>
@@ -74,7 +76,7 @@
             <strong>Aura</strong> es una mujer independiente desde <strong>2005</strong>, madre de <strong>4 hijos</strong>, estilista profesional y emprendedora. Ha dirigido dos empresas grandes y conoce el mundo de las fragancias por su experiencia como compradora en diferentes tiendas de perfumería, incluso en <strong>Panamá</strong>. Siempre busca ofrecer atención personalizada y productos accesibles para todos.
           </p>
         </span>
-        <img class="desktop-image" id="CEO-image" src="../Images/Mona Y Polo 2.jpg" alt="">
+        <img class="desktop-image" id="CEO-image" src="../Images/About-Us/Mona Y Polo.jpg" alt="">
       </article>
     </section>
 
@@ -180,7 +182,7 @@
             <h3>Navegación</h3>
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+              <li><a href="./about-us.html">Acerca de nosotros</a></li>
               <li><a href="./catalogo.html">Catálogo</a></li>
               <li><a href="./contact-us.html">Contáctanos</a></li>
             </ul>
@@ -194,7 +196,7 @@
               <li><a href="#why-we-exist" target="_self" rel="noopener noreferrer">Por qué existimos</a></li>
               <li><a href="#future-vision" target="_self" rel="noopener noreferrer">Visión</a></li>
               <li><a href="#visit-us" target="_self" rel="noopener noreferrer">Visítanos</a></li>
-             
+              <li><a href="./blog.html" target="_self" rel="noopener noreferrer">Blog</a></li>
             </ul>
 
           </span>
