--- a/HTML/contact-us.html
+++ b/HTML/contact-us.html
@@ -23,9 +23,10 @@
         <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
         <ul class="mobile-links">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./about-us.html">Acerca De Nosotros</a></li>
+          <li><a href="./about-us.html">Acerca de nosotros</a></li>
           <li><a href="./catalogo.html">Catálogo</a></li>
           <li><a href="./contact-us.html">Contáctanos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
         </ul>
         <i class="fa-solid fa-x" data-close-button></i>
       </nav>
@@ -36,9 +37,10 @@
         <i class="fa-solid fa-bars" data-menu-bar></i>
         <ul class="desktop-links">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./about-us.html">Acerca De Nosotros</a></li>
+          <li><a href="./about-us.html">Acerca de nosotros</a></li>
           <li><a href="./catalogo.html">Catálogo</a></li>
           <li><a href="./contact-us.html">Contáctanos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
           <li><i id="search-icon" class="fa-solid fa-magnifying-glass fa-lg"></i></li>
         </ul>
       </nav>
@@ -59,8 +61,15 @@
           <span class="contact-method">
             <i class="fa-solid fa-phone contact-icon"></i>
             <h2 class="contact-title">Teléfono</h2>
-            <a class="call-to-action" href="https://wa.me/3167608466" rel="noopener noreferrer" style="--clr:#fff">
-              <span>3167608466</span><i></i>
+            <a class="call-to-action" href="https://wa.me/3223513913" rel="noopener noreferrer" style="--clr:#fff">
+              <span>3223513913</span><i></i>
+            </a>
+          </span>
+          <span class="contact-method">
+            <i class="fa-solid fa-phone contact-icon"></i>
+            <h2 class="contact-title">Teléfono</h2>
+            <a class="call-to-action" href="https://wa.me/3503370279" rel="noopener noreferrer" style="--clr:#fff">
+              <span>3503370279</span><i></i>
             </a>
           </span>
 
@@ -68,7 +77,7 @@
             <i class="fa-solid fa-envelope contact-icon"></i>
             <h2 class="contact-title">Correo</h2>
             <a class="call-to-action" href="mailto:soluciones2526@gmail.com" rel="noopener noreferrer" style="--clr:#fff">
-              <span>soluciones2526</span><i></i>
+              <span>perfumas2015</span><i></i>
             </a>
           </span>
 
@@ -126,7 +135,7 @@
               <h3>Navegación</h3>
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca De Nosotros</a></li>
+                <li><a href="./about-us.html">Acerca de nosotros</a></li>
                 <li><a href="./catalogo.html">Catálogo</a></li>
                 <li><a href="./contact-us.html">Contáctanos</a></li>
               </ul>
