--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -54,7 +54,7 @@
           <div class="catalogue__card catalogue__card--">
             <a class='PDF-link'href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
               <span class="card-content-container">
-                <img src="../Images/Blog/beneficios.jpg" alt="Beneficios">
+                <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy" width="400" height="300">
                 <h3> Nuestros Beneficios </h3>
                 <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
                 <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff" target="_blank">
@@ -69,7 +69,7 @@
           <div class="catalogue__card catalogue__card--">
             <a class='PDF-link'href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
               <span class="card-content-container">
-                <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias">
+                <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
                 <h3> Ciencia de las Fragancias y Educación </h3>
                 <p>Ideal para lectores de blog que aman aprender el “por qué” detrás del comportamiento de las fragancias.</p>
                 <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff" target="_blank">
@@ -84,7 +84,7 @@
           <div class="catalogue__card catalogue__card--">
             <a class='PDF-link'href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
               <span class="card-content-container">
-                <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión">
+                <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
                 <h3> Guías Según la Ocasión y el Momento </h3>
                 <p>Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad.</p>
                 <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff" target="_blank">
@@ -99,7 +99,7 @@
           <div class="catalogue__card catalogue__card--">
             <a class='PDF-link'href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
               <span class="card-content-container">
-                <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal">
+                <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
                 <h3> Estilo Personal y Uso Avanzado </h3>
                 <p>Para quienes desarrollan una relación más profunda y personalizada con las fragancias.</p>
                 <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff" target="_blank">
@@ -111,10 +111,11 @@
              </span>
             </a>
           </div>
+          
           <div class="catalogue__card catalogue__card--">
             <a class='PDF-link'href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
               <span class="card-content-container">
-                <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar">
+                <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
                 <h3> Guía para Comprar y Regalar </h3>
                 <p>Dirigido a compradores de regalos, compradores online y coleccionistas de perfumes.</p>
                 <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action"  style="--clr:#fff" target="_blank">
